# MultiStepRetrosynthesisTTL

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_multistep_retrosynthesis.py
configs/: CUSTOM_Duloxetine_Mol_13.yaml  CUSTOM_Sitagliptin_Mol_16.yaml  CUSTOM_atorvastatin_Mol_11.yaml  ENZR_TestSet_Mol_1.yaml  ENZR_TestSet_Mol_5.yaml  ENZR_TestSet_Mol_8.yaml  config_example.yaml  config_fostemsavir.yaml  config_ozanimod.yaml
makesingleretropredictions/: make_single_retro_prediction.py
makesingleretropredictions/onmt/: translate.py
makesingleretropredictions/onmt/onmt/: opts.py
makesingleretropredictions/onmt/onmt/translate/: translator.py
multistepretropredictions/: __init__.py  multi_step_retro_predictions.py
notebook/: API_reaxys_ENZR_dataset.py  ENZR_Rxn_IDs.txt  visualize_results.ipynb
scscore/: __init__.py  standalone_model_numpy.py
src/ttlretro/: __init__.py  multi_step_retro_predictions.py  run_multistep_retrosynthesis.py  view_routes.py
src/ttlretro/config_yaml/: __init__.py  config_yaml.py
src/ttlretro/rxnmarkcenter/: README.md  __init__.py  mark_reaction_center.py  setup.py
src/ttlretro/single_step_retro/: __init__.py  single_step_retro.py
src/ttlretro/utils/: __init__.py  confidence_normalization.py  confidence_normalization_enzr_full.py
stocks/: list_conditionnal_substructures_tags_R0.csv
