# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "TTLRetro"
description = "package description."
version = '1.6.3'
readme = "README.md"
requires-python = ">=3.8.16"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "david.kreutter@unibe.ch", name = "David Kreutter" },
]
#dynamic = ["version"]
dependencies = [
    "numpy==1.19.5", 
    "pandas==1.1.5", 
    "rdkit==2022.3.3", 
    "opennmt-py@git+https://github.com/reymond-group/OpenNMT-py#71fb9f70e887589941be291b762a8bdad8aa9437", 
    "scscore@git+https://github.com/DavKre/scscore#egg=8cc8b9fbc8150d608d9632b28c1c7c3148433115", 
    ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[project.scripts]
retrosynthesis = "ttlretro.run_multistep_retrosynthesis:main"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/reymond-group/MultiStepRetrosynthesisTTL"
repository = "https://github.com/reymond-group/MultiStepRetrosynthesisTTL"
